apps/ezeerust/01-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ezeerust
  namespace: ezeerust
  annotations:
    flux.weave.works/automated: "false"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ezeerust
  template:
    metadata:
      labels:
        name: ezeerust
    spec:
      containers:
      - name: nginx
        image: "stillinbeta/ezeerust:1557151471"
