apps/ezeerust/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ezeerust
  name: ezeerust
spec:
  selector:
    name: ezeerust
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
