apps/ezeerust/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ezeerust
  namespace: ezeerust
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: ezeerust
      hosts:
      - zeerust.stillinbeta.com
  rules:
  - host: zeerust.stillinbeta.com
    http:
      paths:
      - backend:
          serviceName: ezeerust
          servicePort: 80
